--- a/ARS/pom.xml
+++ b/ARS/pom.xml
@@ -20,8 +20,12 @@
 
 	<dependencies>
 		<!-- ********** J2EE ********** -->
-		<!-- <dependency> <groupId>org.glassfish.extras</groupId> <artifactId>glassfish-embedded-all</artifactId> 
-			<version>3.0.1</version> <scope>test</scope> </dependency> -->
+<!-- 		<dependency>
+			<groupId>org.glassfish.extras</groupId>
+			<artifactId>glassfish-embedded-all</artifactId>
+			<version>3.0.1</version>
+			<scope>test</scope>
+		</dependency> -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -30,14 +34,17 @@
 		</dependency>
 
 		<!-- ********** Database ********** -->
-		<!-- <dependency> <groupId>org.hsqldb</groupId> <artifactId>hsqldb</artifactId> 
-			<version>2.3.1</version> </dependency> -->
-
+<!-- 		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.1</version>
+		</dependency> -->
+		
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.30</version>
-			<scope>runtime</scope>
+   		<groupId>mysql</groupId>
+	   	<artifactId>mysql-connector-java</artifactId>
+		  <version>5.1.30</version>
+		  <scope>runtime</scope>
 		</dependency>
 
 		<!-- ********** Logging ********** -->
@@ -51,8 +58,11 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>log4j</groupId> <artifactId>log4j</artifactId> 
-			<version>${log4j.version}</version> </dependency> -->
+		<!-- <dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency> -->
 
 		<!-- ********** Spring ********** -->
 		<dependency>
@@ -70,24 +80,24 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.1.0.Final</version>
-			<scope>runtime</scope>
+		  <artifactId>hibernate-entitymanager</artifactId>
+		  <version>4.1.0.Final</version>
+		  <scope>runtime</scope>
 		</dependency>
 
 		<!-- ********** Jackson ********** -->
@@ -149,7 +159,7 @@
 			<version>0.8.1</version>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<!--JSFdependencies -->
 		<dependency>
 			<groupId>com.sun.faces</groupId>
@@ -174,17 +184,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>net.sf.dozer</groupId>
-			<artifactId>dozer</artifactId>
-			<version>5.4.0</version>
+		    <groupId>net.sf.dozer</groupId>
+		    <artifactId>dozer</artifactId>
+		    <version>5.4.0</version>
 		</dependency>
 	</dependencies>
 
@@ -241,15 +245,15 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-
+			
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-compiler-plugin</artifactId>
+		    <version>3.1</version>
+		    <configuration>
+		        <source>1.7</source>
+		        <target>1.7</target>
+		    </configuration>
 			</plugin>
 		</plugins>
 	</build>
